templates/09_springboot_deploy_svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot
  namespace: ${NS}
  labels:
    app: springboot-app
    tier: backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: springboot-app
      tier: backend
  template:
    metadata:
      labels:
        app: springboot-app
        tier: backend
    spec:
      serviceAccountName: springboot-sa
      containers:
      - name: springboot
        image: localhost:5000/demo:0.1
        ports:
        - containerPort: 8086
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8086
          initialDelaySeconds: 10
          timeoutSeconds: 2
          periodSeconds: 10
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8086
          initialDelaySeconds: 30
          timeoutSeconds: 2
          periodSeconds: 20
          failureThreshold: 1

---
apiVersion: v1
kind: Service
metadata:
  name: springboot
  namespace: ${NS}
  labels:
    app: springboot-app
    tier: backend
spec:
  ports:
    - name: http
      port: 8086
  selector:
    app: springboot-app
    tier: backend
